--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+		<link rel="icon" href="./fav.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
 		<meta
@@ -31,7 +31,7 @@
 			href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700&display=swap"
 			rel="stylesheet"
 		/>
-		<title>React App</title>
+		<title>Kyle Coffee</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
